        Class PacketInfo:
            - This used to be a template class.  It is now a non-templated
              class, and has been stripped down to just a single static name()
              function.  This function is constexpr, so you can still use it
              at compile time if needed, but you can now use it at runtime also.
        Enum PacketType:
            - New constant PACKET_NONE.
        Class PDF:
            - Added a copy constructor and a copy assignment operator.
            - Added member and global swap() functions.
        Class Perm<n>:
            - Constant arrays invS2, invS3, ... have been removed completely.
              Calling perm.inverse() directly is just as fast.  If you really
              needed invSn[i], use Sn[i].inverse().SnIndex() instead.
            - Replaced lookup tables S1, S2, S3, ..., orderedS2, orderedS3, ...
              with lightweight objects whose square bracket operators compute
              and/or look up the relevant permutations on the fly.
            - Renamed preImageOf() to pre().  The old name is kept as a
              deprecated alias.
            - Now all n (not just small n) have static members Sn and orderedSn
              and member functions SnIndex() and orderedSnIndex().
            - New static routine rot().
            - New class constant codeType.
            - For all classes that support packed image sequences in any form
              (n >= 4), added type ImagePack; constants imageBits, imageMask;
              and routines imagePack(), fromImagePack(), isImagePack().  For
              n >= 8 these are aliases for the permutation code routines; for
              n = 4..7 they are aliases for the first-generation code routines.
            - Almost everything in the permutation classes is now constexpr.
            - Routines index() and atIndex() are now deprecated.
              Use orderedSnIndex() and orderedSn[...] instead.
        Class Perm<2>, Perm<3>: